--- a/index.html
+++ b/index.html
@@ -4,97 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Khant's Journey</title>
-  <style>
-    body {
-      font-family: 'Helvetica Neue', sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      color: #333;
-    }
-
-    /* Navigation Bar */
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 20px;
-      background-color: #ffffff;
-      border-bottom: 1px solid #ddd;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    .navbar .social-icons a {
-      margin-right: 15px;
-      text-decoration: none;
-    }
-
-    .navbar .social-icons img {
-      width: 24px;
-      height: 24px;
-    }
-
-    .navbar .home-button a {
-      text-decoration: none;
-      color: #0070f3;
-      font-weight: bold;
-      font-size: 1rem;
-      padding: 8px 12px;
-      border: 1px solid #0070f3;
-      border-radius: 4px;
-    }
-
-    header {
-      background: #f9f9f9;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .cta {
-      margin-top: 20px;
-    }
-
-    .cta input[type="email"] {
-      padding: 10px;
-      width: 250px;
-      max-width: 80%;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-
-    .cta button {
-      padding: 10px 20px;
-      background: #0070f3;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      margin-left: 10px;
-      cursor: pointer;
-    }
-
-    .section {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    footer {
-      background: #f1f1f1;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      color: #777;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Navigation Bar -->
   <div class="navbar">
     <div class="social-icons">
-      <a href="https://instagram.com/yourusername" target="_blank">
+      <a href="https://instagram.com/kai.explorer" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
       </a>
       <a href="https://facebook.com/yourusername" target="_blank">
@@ -137,16 +54,6 @@
     &copy; 2025 Khant's Journey. All rights reserved.
   </footer>
 
-  <script>
-    function subscribe() {
-      const email = document.getElementById("emailInput").value;
-      if (email) {
-        alert(`Thanks for subscribing, ${email}!`);
-      } else {
-        alert("Please enter a valid email address.");
-      }
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
