--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <a href="https://instagram.com/kai.explorer" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
       </a>
-      <a href="https://facebook.com/yourusername" target="_blank">
+      <a href="https://facebook.com/kai.explorer" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
       </a>
-      <a href="https://tiktok.com/@yourusername" target="_blank">
+      <a href="https://tiktok.com/@henryy.ig" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
       </a>
     </div>
