--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
       <a href="https://tiktok.com/@henryy.ig" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
       </a>
+      <a href="https://youtube.com/@yourchannel" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
+      </a>
+      <a href="https://x.com/yourusername" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png" alt="X (Twitter)">
+      </a>
     </div>
     <div class="home-button">
       <a href="index.html">Khant's Journey</a>
@@ -30,10 +36,6 @@
   <header>
     <h1>Build Better Habits</h1>
     <p>Get proven strategies to improve your habits and live a better life.</p>
-    <div class="cta">
-      <input type="email" id="emailInput" placeholder="Enter your email" />
-      <button onclick="subscribe()">Join Now</button>
-    </div>
   </header>
 
   <!-- Main Content -->
@@ -54,6 +56,5 @@
     &copy; 2025 Khant's Journey. All rights reserved.
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
