--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <a href="https://tiktok.com/@henryy.ig" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
       </a>
-      <a href="https://youtube.com/@yourchannel" target="_blank">
+      <a href="https://youtube.com/@henrynotebook" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
       </a>
-      <a href="https://x.com/yourusername" target="_blank">
+      <a href="https://x.com/kaidotexplorer" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png" alt="X (Twitter)">
       </a>
     </div>
