--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="navbar">
     <div class="social-icons">
       <a href="https://instagram.com/kai.explorer" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+        <img src="image/instagram.png" alt="Instagram">
       </a>
       <a href="https://facebook.com/kai.explorer" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
