--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Khant's Journey</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-image: url('image/image1.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
 
