--- a/index.html
+++ b/index.html
@@ -5,17 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Khant's Journey</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background-image: url('image/image1.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
 </head>
 <body>
 
@@ -23,19 +12,19 @@
   <div class="navbar">
     <div class="social-icons">
       <a href="https://instagram.com/kai.explorer" target="_blank">
-        <img src="image/instagram.png" alt="Instagram">
+        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
       </a>
       <a href="https://facebook.com/kai.explorer" target="_blank">
-        <img src="image/facebook.png" alt="Facebook">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
       </a>
       <a href="https://tiktok.com/@henryy.ig" target="_blank">
-        <img src="image/tiktok.png" alt="TikTok">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
       </a>
-      <a href="https://youtube.com/@henrynotebook" target="_blank">
-        <img src="image/youtube.png" alt="YouTube">
+      <a href="https://youtube.com/@yourchannel" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube">
       </a>
-      <a href="https://x.com/kaidotexplorer" target="_blank">
-        <img src="image/x.png" alt="X (Twitter)">
+      <a href="https://x.com/yourusername" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/5968/5968958.png" alt="X (Twitter)">
       </a>
     </div>
     <div class="home-button">
