--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <div class="navbar">
     <div class="social-icons">
       <a href="https://instagram.com/kai.explorer" target="_blank">
-        <img src="image/instagram.jpg" alt="Instagram">
+        <img src="image/instagram.png" alt="Instagram">
       </a>
       <a href="https://facebook.com/kai.explorer" target="_blank">
-        <img src="image/facebook.jpg" alt="Facebook">
+        <img src="image/facebook.png" alt="Facebook">
       </a>
       <a href="https://tiktok.com/@henryy.ig" target="_blank">
-        <img src="image/tiktok.jpg" alt="TikTok">
+        <img src="image/tiktok.png" alt="TikTok">
       </a>
       <a href="https://youtube.com/@yourchannel" target="_blank">
-        <img src="image/youtube.jpg" alt="YouTube">
+        <img src="image/youtube.png" alt="YouTube">
       </a>
       <a href="https://x.com/yourusername" target="_blank">
-        <img src="image/x.jpg" alt="X (Twitter)">
+        <img src="image/x.png" alt="X (Twitter)">
       </a>
     </div>
     <div class="home-button">
