--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+   <!-- Navigation -->
+  <nav class="navbar">
+    <div class="logo">Wanderlust</div>
+    <ul class="nav-links">
+      <li><a href="#">Destinations</a></li>
+      <li><a href="#">Inspiration</a></li>
+      <li><a href="#">Competitions</a></li>
+      <li><a href="#">Magazine</a></li>
+      <li><a href="#">Subscribe</a></li>
+    </ul>
+  </nav>
 
   <!-- Navigation Bar -->
   <div class="navbar">
