--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
       <a href="https://facebook.com/kai.explorer" target="_blank">
         <img src="image/facebook.png" alt="Facebook">
       </a>
-      <a href="https://tiktok.com/@henryy.ig" target="_blank">
-        <img src="image/tiktok.png" alt="TikTok">
-      </a>
       <a href="https://youtube.com/@yourchannel" target="_blank">
         <img src="image/youtube.png" alt="YouTube">
       </a>
-      <a href="https://x.com/yourusername" target="_blank">
+      <a href="https://x.com/kaidotexplorer" target="_blank">
         <img src="image/x.png" alt="X (Twitter)">
       </a>
     </div>
