--- a/index.html
+++ b/index.html
@@ -3,114 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MapAuthority</title>
+  <title>AROWWAI INDUSTRIES</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-    }
-    .footer {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      background-color: #1a1a1a;
+      background: url('image/aurora.png') no-repeat center center fixed;
+      background-size: cover;
       color: white;
-      padding: 40px 20px;
+      text-align: center;
     }
-    .footer-section {
-      flex: 1 1 200px;
-      margin: 20px;
+    header {
+      padding: 100px 20px 40px;
     }
-    .footer-logo {
-      height: 50px;
-      margin-bottom: 10px;
+    header h1 {
+      font-size: 60px;
+      margin: 0;
     }
-    .footer-description {
-      font-size: 14px;
-      margin-bottom: 10px;
+    header p {
+      font-size: 20px;
+      margin-top: 10px;
     }
-    .social-icons img {
-      height: 24px;
-      margin-right: 10px;
+    nav {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 15px 0;
     }
-    .footer-section h3 {
-      margin-bottom: 10px;
-    }
-    .footer-section ul {
-      list-style: none;
-      padding: 0;
-    }
-    .footer-section ul li {
-      margin-bottom: 8px;
-    }
-    .footer-section ul li a {
-      color: white;
+    nav a {
+      margin: 0 20px;
       text-decoration: none;
-    }
-    .footer-section form {
-      display: flex;
-      flex-direction: column;
-    }
-    .footer-section input[type="email"] {
-      padding: 10px;
-      margin-bottom: 10px;
-      font-size: 14px;
-    }
-    .footer-section button {
-      padding: 10px;
-      background-color: red;
       color: white;
-      border: none;
-      cursor: pointer;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
 
-<footer class="footer">
-  <div class="footer-section">
-    <img src="logo.png" alt="Logo" class="footer-logo" />
-    <p class="footer-description">
-      MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
-    </p>
-    <div class="social-icons">
-      <img src="facebook.png" alt="Facebook" />
-      <img src="instagram.png" alt="Instagram" />
-      <img src="linkedin.png" alt="LinkedIn" />
-      <img src="twitter.png" alt="Twitter" />
-    </div>
-  </div>
+<nav>
+  <a href="home.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="trips.html">Trips</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="contact.html">Contact</a>
+</nav>
 
-  <div class="footer-section">
-    <h3>Contact</h3>
-    <p>Email: info@mapauthority.com</p>
-    <p>Live Chat</p>
-    <p>4210 Flagstaff Cove<br>Fort Wayne, IN 46815</p>
-  </div>
-
-  <div class="footer-section">
-    <h3>Navigation</h3>
-    <ul>
-      <li><a href="#">Demo</a></li>
-      <li><a href="#">Overview</a></li>
-      <li><a href="#">Pricing</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">For Retailers</a></li>
-      <li><a href="#">Support Hub</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Sign In</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-section">
-    <h3>Subscribe to New Blog Posts</h3>
-    <form>
-      <input type="email" placeholder="Enter your email address" />
-      <button type="submit">Subscribe</button>
-    </form>
-  </div>
-</footer>
+<header>
+  <h1>AROWWAI INDUSTRIES</h1>
+  <p>Where the sky dances with light and dreams take flight beneath the aurora's glow.</p>
+</header>
 
 </body>
 </html>
