--- a/index.html
+++ b/index.html
@@ -5,51 +5,99 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AROWWAI INDUSTRIES</title>
   <style>
-    body {
+    body, html {
       margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
       background: url('image/aurora.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
-      text-align: center;
     }
-    header {
-      padding: 100px 20px 40px;
+
+    .navbar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 30px;
+      background-color: rgba(0, 0, 0, 0.4);
     }
-    header h1 {
-      font-size: 60px;
-      margin: 0;
+
+    .navbar .logo {
+      font-size: 24px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
     }
-    header p {
-      font-size: 20px;
-      margin-top: 10px;
+
+    .navbar .nav-links {
+      display: flex;
+      gap: 20px;
     }
-    nav {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 15px 0;
-    }
-    nav a {
-      margin: 0 20px;
-      text-decoration: none;
+
+    .navbar .nav-links a {
       color: white;
-      font-size: 18px;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    .navbar .search-bar {
+      display: flex;
+      align-items: center;
+      background-color: white;
+      border-radius: 20px;
+      padding: 5px 10px;
+    }
+
+    .navbar .search-bar input {
+      border: none;
+      outline: none;
+      padding: 5px;
+      font-size: 14px;
+    }
+
+    .navbar .search-bar img {
+      height: 16px;
+      margin-left: 5px;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 100px 20px;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+      max-width: 600px;
+      margin: 0 auto;
     }
   </style>
 </head>
 <body>
 
-<nav>
-  <a href="home.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="trips.html">Trips</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="contact.html">Contact</a>
-</nav>
+  <div class="navbar">
+    <div class="logo">AROWWAI INDUSTRIES</div>
+    <div class="nav-links">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Trips</a>
+      <a href="#">Gallery</a>
+      <a href="#">Contact</a>
+    </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Enter keyword..." />
+      <img src="image/search-icon.png" alt="Search" />
+    </div>
+  </div>
 
-<header>
-  <h1>AROWWAI INDUSTRIES</h1>
-  <p>Where the sky dances with light and dreams take flight beneath the aurora's glow.</p>
-</header>
+  <div class="hero">
+    <h1>Welcome to AROWWAI</h1>
+    <p>Experience the magic of the aurora under the northern skies</p>
+  </div>
 
 </body>
 </html>
