--- a/index.html
+++ b/index.html
@@ -99,5 +99,50 @@
     <p>Experience the magic of the aurora under the northern skies</p>
   </div>
 
+<footer class="footer" style="background: url('image/aurora.png') no-repeat center center fixed; background-size: cover;">
+  <div class="footer-section">
+    <img src="logo.png" alt="Logo" class="footer-logo" />
+    <p class="footer-description">
+      MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
+    </p>
+    <div class="social-icons">
+      <img src="facebook.png" alt="Facebook" />
+      <img src="instagram.png" alt="Instagram" />
+      <img src="linkedin.png" alt="LinkedIn" />
+      <img src="twitter.png" alt="Twitter" />
+    </div>
+  </div>
+
+  <div class="footer-section">
+    <h3>Contact</h3>
+    <p>Email: info@mapauthority.com</p>
+    <p>Live Chat</p>
+    <p>4210 Flagstaff Cove<br>Fort Wayne, IN 46815</p>
+  </div>
+
+  <div class="footer-section">
+    <h3>Navigation</h3>
+    <ul>
+      <li><a href="#">Demo</a></li>
+      <li><a href="#">Overview</a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">For Retailers</a></li>
+      <li><a href="#">Support Hub</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Sign In</a></li>
+    </ul>
+  </div>
+
+  <div class="footer-section">
+    <h3>Subscribe to New Blog Posts</h3>
+    <form>
+      <input type="email" placeholder="Enter your email address" />
+      <button type="submit">Subscribe</button>
+    </form>
+  </div>
+</footer>
+
 </body>
 </html>
+
