--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <body>
 
   <div class="navbar">
-    <div class="logo">AROWWAI INDUSTRIES</div>
+    <div class="logo">Khant</div>
     <div class="nav-links">
       <a href="#">Home</a>
       <a href="#">About</a>
@@ -150,10 +150,9 @@
         MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
       </p>
       <div class="social-icons">
-        <img src="facebook.png" alt="Facebook" />
-        <img src="instagram.png" alt="Instagram" />
-        <img src="linkedin.png" alt="LinkedIn" />
-        <img src="twitter.png" alt="Twitter" />
+        <img src="image/facebook.png" alt="Facebook" />
+        <img src="image/instagram.png" alt="Instagram" />
+        <img src="image/x.png" alt="Twitter" />
       </div>
     </div>
 
