--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AROWWAI INDUSTRIES</title>
+  <title>Khant</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -139,7 +139,7 @@
     </div>
     <div class="search-container">
       <input type="text" placeholder="Enter keyword..." />
-      <img src="image/magnifier.png" alt="Search" class="search-icon" />
+      <img src="image/magnifer.png" alt="Search" class="search-icon" />
     </div>
   </div>
 
