--- a/index.html
+++ b/index.html
@@ -152,28 +152,27 @@
       <div class="social-icons">
         <img src="image/facebook.png" alt="Facebook" />
         <img src="image/instagram.png" alt="Instagram" />
-        <img src="image/x.png" alt="Twitter" />
+        <img src="image/x.png" alt="X" />
       </div>
     </div>
 
     <div class="footer-section">
       <h3>Contact</h3>
-      <p>Email: info@mapauthority.com</p>
-      <p>Live Chat</p>
-      <p>4210 Flagstaff Cove<br>Fort Wayne, IN 46815</p>
+      <p>Email: khantwinaungz@gmail.com</p>
+     
+      <p>42 Taungoo<br>Bago Region, Myanmar</p>
     </div>
 
     <div class="footer-section">
       <h3>Navigation</h3>
       <ul>
-        <li><a href="#">Demo</a></li>
+       
         <li><a href="#">Overview</a></li>
-        <li><a href="#">Pricing</a></li>
         <li><a href="#">Blog</a></li>
-        <li><a href="#">For Retailers</a></li>
-        <li><a href="#">Support Hub</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Countries</a></li>
+        <li><a href="#">Destinations</a></li>
+        <li><a href="#">Current Destinations</a></li>
+        <li><a href="#">Next Destinations</a></li>
       </ul>
     </div>
 
