--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Khant</title>
+  <title>Khant Journey</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -129,7 +129,7 @@
 <body>
 
   <div class="navbar">
-    <div class="logo">Khant</div>
+    <div class="logo">image/logo.png</div>
     <div class="nav-links">
       <a href="#">Home</a>
       <a href="#">About</a>
@@ -145,7 +145,7 @@
 
   <footer class="footer">
     <div class="footer-section">
-      <img src="logo.png" alt="Logo" class="footer-logo" />
+      <img src="image/logo.png" alt="Logo" class="footer-logo" />
       <p class="footer-description">
         MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
       </p>
