--- a/index.html
+++ b/index.html
@@ -176,13 +176,17 @@
       </ul>
     </div>
 
-    <div class="footer-section">
-      <h3>Subscribe to New Blog Posts</h3>
-      <form>
-        <input type="email" placeholder="Enter your email address" />
-        <button type="submit">Subscribe</button>
-      </form>
-    </div>
+   <div class="footer-section">
+  <h3 style="color: white;">Subscribe to New Blog Posts</h3>
+  <form>
+    <input type="email" placeholder="Enter your email address" 
+           style="padding: 10px; font-size: 14px; width: 100%; background: transparent; border: 1px solid white; color: white;" />
+    <button type="submit" 
+            style="padding: 10px; font-size: 14px; background: transparent; border: 1px solid white; color: white; margin-top: 10px; cursor: pointer;">
+      Subscribe
+    </button>
+  </form>
+</div>
   </footer>
 
 </body>
