--- a/index.html
+++ b/index.html
@@ -137,11 +137,13 @@
       <a href="#">Gallery</a>
       <a href="#">Contact</a>
     </div>
-    <div class="search-container">
-      <input type="text" placeholder="Enter keyword..." />
-      <img src="image/magnifer.png" alt="Search" class="search-icon" />
-    </div>
-  </div>
+    <div class="search-container" style="position: relative;">
+  <input type="text" placeholder="Enter keyword..." 
+         style="padding: 8px 35px 8px 10px; border-radius: 20px; border: 1px solid white; background: transparent; color: white; font-size: 14px;" />
+  <img src="image/magnifier.png" alt="Search" class="search-icon" 
+       style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); width: 16px; height: 16px;" />
+</div>
+
 
   <footer class="footer">
     <div class="footer-section">
