--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +6,19 @@
   <title>Khant Journey</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
+    margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: 'Montserrat', sans-serif;
       background: url('image/aurora.png') no-repeat center center fixed;
       background-size: cover;
       color: white;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     .navbar {
@@ -20,7 +26,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 20px 40px;
-      background-color: rgba(0, 0, 0, 0); /* Fully transparent */
+      background-color: rgba(0, 0, 0, 0);
     }
 
     .navbar .logo {
@@ -61,13 +67,17 @@
       height: 16px;
     }
 
+    main {
+      flex: 1;
+      padding: 20px;
+    }
+
     footer.footer {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       padding: 40px;
-      background: url('image/aurora.png') no-repeat center center fixed;
-      background-size: cover;
+      background: rgba(0, 0, 0, 0.6);
       color: white;
     }
 
@@ -127,69 +137,65 @@
   </style>
 </head>
 <body>
-
-  <div class="navbar">
-    <div class="logo">image/logo.png</div>
-    <div class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Trips</a>
-      <a href="#">Gallery</a>
-      <a href="#">Contact</a>
-    </div>
-    <div class="search-container" style="position: relative;">
-  <input type="text" placeholder="Enter keyword..." 
-         style="padding: 8px 35px 8px 10px; border-radius: 20px; border: 1px solid white; background: transparent; color: white; font-size: 14px;" />
-  <img src="image/magnifier.png" alt="Search" class="search-icon" 
-       style="position: absolute; right: 10px; top: 50%; transform: translateY(-50%); width: 16px; height: 16px;" />
-</div>
-
-
-  <footer class="footer">
-    <div class="footer-section">
-      <img src="image/logo.png" alt="Logo" class="footer-logo" />
-      <p class="footer-description">
-        MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
-      </p>
-      <div class="social-icons">
-        <img src="image/facebook.png" alt="Facebook" />
-        <img src="image/instagram.png" alt="Instagram" />
-        <img src="image/x.png" alt="X" />
+  <div class="container">
+    <div class="navbar">
+      <div class="logo">image/logo.png</div>
+      <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Trips</a>
+        <a href="#">Gallery</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="search-container">
+        <input type="text" placeholder="Enter keyword..." style="background: transparent; border: 1px solid white; color: white;" />
+        <img src="image/magnifer.png" alt="Search" class="search-icon" />
       </div>
     </div>
 
-    <div class="footer-section">
-      <h3>Contact</h3>
-      <p>Email: khantwinaungz@gmail.com</p>
-     
-      <p>42 Taungoo<br>Bago Region, Myanmar</p>
-    </div>
+    <main>
+      <!-- Your main content goes here -->
+    </main>
 
-    <div class="footer-section">
-      <h3>Navigation</h3>
-      <ul>
-       
-        <li><a href="#">Overview</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Countries</a></li>
-        <li><a href="#">Destinations</a></li>
-        <li><a href="#">Current Destinations</a></li>
-        <li><a href="#">Next Destinations</a></li>
-      </ul>
-    </div>
+    <footer class="footer">
+      <div class="footer-section">
+        <img src="image/logo.png" alt="Logo" class="footer-logo" />
+        <p class="footer-description">
+          MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
+        </p>
+        <div class="social-icons">
+          <img src="image/facebook.png" alt="Facebook" />
+          <img src="image/instagram.png" alt="Instagram" />
+          <img src="image/x.png" alt="X" />
+        </div>
+      </div>
 
-   <div class="footer-section">
-  <h3 style="color: white;">Subscribe to New Blog Posts</h3>
-  <form>
-    <input type="email" placeholder="Enter your email address" 
-           style="padding: 10px; font-size: 14px; width: 100%; background: transparent; border: 1px solid white; color: white;" />
-    <button type="submit" 
-            style="padding: 10px; font-size: 14px; background: transparent; border: 1px solid white; color: white; margin-top: 10px; cursor: pointer;">
-      Subscribe
-    </button>
-  </form>
-</div>
-  </footer>
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Email: khantwinaungz@gmail.com</p>
+        <p>42 Taungoo<br>Bago Region, Myanmar</p>
+      </div>
 
+      <div class="footer-section">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="#">Overview</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Countries</a></li>
+          <li><a href="#">Destinations</a></li>
+          <li><a href="#">Current Destinations</a></li>
+          <li><a href="#">Next Destinations</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Subscribe to New Blog Posts</h3>
+        <form>
+          <input type="email" placeholder="Enter your email address" style="background: transparent; border: 1px solid white; color: white;" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
