--- a/index.html
+++ b/index.html
@@ -1,210 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Khant Journey</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html, body {
-      height: 100%;
-      font-family: 'Montserrat', sans-serif;
-      background: url('image/aurora.png') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background-color: rgba(0, 0, 0, 0);
-    }
-
-    .navbar .logo {
-      font-size: 24px;
-      font-weight: 700;
-      letter-spacing: 2px;
-   nav-links {
-      display: flex;
-      gap: 25px;
-    }
-
-    .navbar .nav-links a {
-      text-decoration: none;
-      color: white;
-      font-weight: 500;
-      font-size: 16px;
-    }
-
-    .navbar .search-container {
-      position: relative;
-    }
-
-    .navbar input[type="text"] {
-      padding: 8px 35px 8px 10px;
-      border-radius: 20px;
-      border: none;
-      font-size: 14px;
-      background: transparent;
-      border: 1px solid white;
-      color: white;
-    }
-
-    .navbar .search-icon {
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 16px;
-      height: 16px;
-    }
-
-    main {
-      flex: 1;
-      padding: 20px;
-    }
-
-    footer.footer {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      padding: 40px;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-    }
-
-    .footer-section {
-      flex: 1 1 200px;
-      margin: 20px;
-    }
-
-    .footer-logo {
-      height: 50px;
-      margin-bottom: 10px;
-    }
-
-    .footer-description {
-      font-size: 14px;
-      margin-bottom: 10px;
-    }
-
-    .social-icons img {
-      height: 24px;
-      margin-right: 10px;
-    }
-
-    .footer-section h3 {
-      margin-bottom: 10px;
-    }
-
-    .footer-section ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    .footer-section ul li {
-      margin-bottom: 8px;
-    }
-
-    .footer-section ul li a {
-      color: white;
-      text-decoration: none;
-    }
-
-    .footer-section input[type="email"] {
-      padding: 10px;
-      margin-bottom: 10px;
-      font-size: 14px;
-      width: 100%;
-      background: transparent;
-      border: 1px solid white;
-      color: white;
-    }
-
-    .footer-section button {
-      padding: 10px;
-      background-color: red;
-      color: white;
-      border: none;
-      cursor: pointer;
-      width: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="navbar">
-      <div class="logo">image/logo.png</div>
-      <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Trips</a>
-        <a href="#">Gallery</a>
-        <a href="#">Contact</a>
-      </div>
-      <div class="search-container">
-        <input type="text" placeholder="Enter keyword..." />
-        <img src="image/magnifer.png" alt="Search" class="search-icon" />
-      </div>
-    </div>
-
-    <main>
-      <!-- Your main content goes here -->
-    </main>
-
-    <footer class="footer">
-      <div class="footer-section">
-        <img src="image/logo.png" alt="Logo" class="footer-logo" />
-        <p class="footer-description">
-          MAP Authority's patent pending software is the only tool on the market to truly enforce your MAP pricing on Amazon.
-        </p>
-        <div class="social-icons">
-          <img src="image/facebook.png" alt="Facebook" />
-          <img src="image/instagram.png" alt="Instagram" />
-          <img src="image/x.png" alt="X" />
+    <header style="background-image: url('image/aurora.png');">
+        <div class="top-bar">
+            <div class="search-bar">
+                <input type="text" placeholder="Search...">
+                <img src="image/magnifer.png" alt="Search">
+            </div>
+            <nav>
+                <img src="image/logo.png" class="logo" onclick="goToPage('index.html')" alt="Logo">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="About.html">About</a></li>
+                    <li><a href="Country.html">Country</a></li>
+                    <li><a href="Gallery.html">Gallery</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-      </div>
+    </header>
 
-      <div class="footer-section">
-        <h3>Contact</h3>
-        <p>Email: khantwinaungz@gmail.com</p>
-        <p>42 Taungoo<br>Bago Region, Myanmar</p>
-      </div>
+    <section class="slideshow">
+        <div class="slide"> 
+            <h1>THIS PAGE IS LAUNCHING</h1>
+            <p>This page is going to be launch soon please come and visit again</p>
+        </div>
+        <div class="slide">
+            <h1>THIS PAGE IS LAUNCHING</h1>
+            <p>This page is going to be launch soon please come and visit again</p>
+        </div>
+        <div class="cycle-buttons">
+            <button onclick="prevSlide()">❮</button>
+            <button onclick="nextSlide()">❯</button>
+        </div>
+    </section>
 
-      <div class="footer-section">
-        <h3>Navigation</h3>
-        <ul>
-          <li><a href="#">Overview</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Countries</a></li>
-          <li><a href="#">Destinations</a></li>
-          <li><a href="#">Current Destinations</a></li>
-          <li><a href="#">Next Destinations</a></li>
-        </ul>
-      </div>
+    <hr class="divider">
 
-      <div class="footer-section">
-        <h3>Subscribe to New Blog Posts</h3>
-        <form>
-          <input type="email" placeholder="Enter your email address" />
-          <button type="submit">Subscribe</button>
-        </form>
-      </div>
+    <footer>
+        <div class="footer-left">
+            <h3>Subscribe</h3>
+            <input type="email" placeholder="Enter your email address">
+            <button>Subscribe</button>
+        </div>
+        <div class="footer-center">
+            <h3>Contact</h3>
+            <p>khantwinaungz@gmail.com</p>
+            <p>42 Taungoo, Bago Region, Myanmar</p>
+        </div>
+        <div class="footer-right">
+            <img src="image/logo.png" class="footer-logo" alt="Logo">
+            <div class="social-icons">
+                <a href="#"><img src="image/Instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="image/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="image/X.png" alt="X"></a>
+            </div>
+        </div>
     </footer>
-  </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
