--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#">Destinations</a></li>
                     <li><a href="#">Travel Tips</a></li>
-                    <li><a href="#">Bucket Lists</a></li>
+                    <li><a href="#">Countries</a></li>
                     <li><a href="#">Photography</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
