--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                     <ul>
                         <li><a href="#">Destinations</a></li>
                         <li><a href="#">Travel Guides</a></li>
+                        <li><a href="#">Countries</a></li>
                         <li><a href="#">Bucket Lists</a></li>
                         <li><a href="#">Photography Tips</a></li>
                     </ul>
