--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +16,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Destinations</a></li>
+                    <li><a href="destinations.html">Destinations</a></li>
                     <li><a href="#">Travel Tips</a></li>
                     <li><a href="#">Countries</a></li>
                     <li><a href="#">Photography</a></li>
