--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +35,7 @@
         <div class="hero-content">
             <h1>Adventure Awaits Around Every Corner</h1>
             <p>Discover inspiring travel stories and bucket list destinations</p>
-            <a href="#" class="btn">Explore Destinations</a>
+            <a href="destinations.html" class="btn">Explore Destinations</a>
         </div>
     </section>
 
@@ -75,6 +76,8 @@
             </div>
         </div>
     </section>
+
+    
 
     <!-- Newsletter -->
     <section class="newsletter">
