--- a/index.html
+++ b/index.html
@@ -9,26 +9,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+  
     <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="#">TravelBucket</a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="destinations.html">Destinations</a></li>
-                    <li><a href="#">Travel Tips</a></li>
-                    <li><a href="#">Countries</a></li>
-                    <li><a href="#">Photography</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
-            </nav>
-            <div class="mobile-menu">
-                <i class="fas fa-bars"></i>
-            </div>
+<header>
+    <div class="container">
+        <div class="logo">
+            <a href="index.html">TravelBucket</a>
         </div>
-    </header>
+        <nav>
+            <ul>
+                <li class="dropdown">
+                    <a href="#">Destinations</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="thailand.html">Thailand</a></li>
+                        <li><a href="philippines.html">Philippines</a></li>
+                        <li><a href="japan.html">Japan</a></li>
+                        <li><a href="vietnam.html">Vietnam</a></li>
+                        <!-- Add more countries as needed -->
+                    </ul>
+                </li>
+                <li><a href="#">Travel Tips</a></li>
+                <li><a href="#">Countries</a></li>
+                <li><a href="#">Photography</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+        <div class="mobile-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+    </div>
+</header>
+
 
     <!-- Hero Section -->
     <section class="hero">
