--- a/thailand.html
+++ b/thailand.html
@@ -29,6 +29,23 @@
         </div>
     </header>
 
+        <!-- Header -->
+<header>
+    <div class="container">
+        <div class="logo">
+            <a href="index.html">TravelBucket</a>
+        </div>
+        <nav>
+            <ul>
+                <li class="dropdown">
+                    <a href="#">Destinations</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="thailand.html">Thailand</a></li>
+                        <li><a href="philippines.html">Philippines</a></li>
+                        <li><a href="japan.html">Japan</a></li>
+                        <li><a href="vietnam.html">Vietnam</a></li>
+                        <!-- Add more countries as needed -->
+                        
     <!-- Hero Section -->
     <section class="hero" style="background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e'); background-size: cover;">
         <div class="hero-content">
